# rally_game

./: .gitignore  Cargo.toml  README.md
assets/game/: arena_game_modes.ron  arena_properties.ron  vehicle_properties.ron  vehicle_selection_order.ron  vehicle_type_sprites.ron  vehicles.ron  weapon_gun_game_order.ron  weapon_properties.ron  weapon_selection_order.ron  weapon_spawn_chance.ron  weapons.ron
assets/texture/: game_logo.xcf  rally_spritesheet.ron  rally_texture_sheet.ron
assets/ui/: custom_arena.ron  custom_vehicles.ron  custom_weapons.ron  game_fps.ron  gameplay.ron  menu.ron  score_screen.ron  welcome.ron
config/: bindings.ron  bindings_controller.ron  bindings_mp.ron  display.ron  display_fullscreen.ron  vehicles.ron  weapons.ron
src/: audio.rs  credits.rs  custom_arena.rs  custom_vehicles.rs  custom_weapons.rs  main.rs  menu.rs  pause.rs  rally.rs  score_screen.rs  welcome.rs
src/components/: arena.rs  armor.rs  health.rs  hitbox.rs  mod.rs  particles.rs  players.rs  repair.rs  shields.rs  vehicles.rs  weapons.rs
src/entities/: arena.rs  camera.rs  mod.rs  particles.rs  player.rs  ui.rs  weapon_boxes.rs  weapon_fire.rs
src/resources/: arena_navmesh.rs  game_mode_setup.rs  match_timer.rs  mod.rs  weapon_fire_resource.rs
src/systems/: camera_tracking.rs  collision_vehicle_arena.rs  collision_vehicle_vehicle.rs  collision_vehicle_vehicle_handler.rs  collision_vehicle_weapon_fire.rs  collision_weapon_fire_to_hitbox.rs  debug_lines.rs  game_objective_status.rs  gameplay_manager.rs  mod.rs  move_particles.rs  move_weapon_fire.rs  pathing_lines.rs  (+8 more)
