[package]
name = "rally"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }
specs-physics = { git = "https://github.com/paulkernfeld/specs-physics" }
rand = "0.7.3"
ron = "0.2.0"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
