[package]
name = "rally"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15"
log = "0.4"
rand = "0.7"
ron = "0.5"
serde = { version = "1", features = ["derive"] }
specs-physics = { git = "https://github.com/paulkernfeld/specs-physics" }
nalgebra = "0.20"
ncollide2d = "0.22"
navmesh = "0.8"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
